Upgrade gradle and dependencies (removing PowerMock)