@@ -19,23 +19,23 @@
 
 package org.jodconverter.local.office;
 
-import java.io.File;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import org.jodconverter.core.office.AbstractOfficeManagerPool;
 import org.jodconverter.core.office.InstalledOfficeManagerHolder;
 import org.jodconverter.core.office.OfficeUtils;
 import org.jodconverter.core.util.AssertUtils;
 import org.jodconverter.core.util.StringUtils;
 import org.jodconverter.local.process.ProcessManager;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.File;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Default {@link org.jodconverter.core.office.OfficeManager} implementation that uses a pool of
@@ -326,8 +326,14 @@ public final class LocalOfficeManager
       try {
         return StringUtils.isBlank(processManagerClass)
             ? this
-            : processManager((ProcessManager) Class.forName(processManagerClass).newInstance());
-      } catch (InstantiationException | IllegalAccessException | ClassNotFoundException ex) {
+            : processManager(
+                (ProcessManager)
+                    Class.forName(processManagerClass).getDeclaredConstructor().newInstance());
+      } catch (InstantiationException
+          | IllegalAccessException
+          | ClassNotFoundException
+          | NoSuchMethodException
+          | InvocationTargetException ex) {
         throw new IllegalArgumentException(
             "Could not create a process manager from the specified class name: "
                 + processManagerClass,
